chore: remove everything and create empty files I'm gonna make it into an actual component rather than the test it was before

--- a/firmware/test/PSAT_GPS/main/CMakeLists.txt
+++ b/firmware/test/PSAT_GPS/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-    SRCS "main.c" "lib/gps.c" "lib/minmea.c"
-    INCLUDE_DIRS "." "lib"
-    REQUIRES driver
+    SRCS "main.c"
+    INCLUDE_DIRS "."
+    REQUIRES gps driver
 )
