fix: oopsie daisies forgor header guards :skull: (and other fixes)

--- a/firmware/test/PSAT_GPS/components/gps/CMakeLists.txt
+++ b/firmware/test/PSAT_GPS/components/gps/CMakeLists.txt
@@ -1,7 +1,5 @@
-file(GLOB_RECURSE GPS_SOURCES "*.c")
-
 idf_component_register(
-    SRCS ${GPS_SOURCES}
+    SRCS "gps_driver.c" "gps_parser.c" "gps_state.c" "minmea.c"
     INCLUDE_DIRS "include"
     REQUIRES driver
 )
