--- a/firmware/gps/components/deployment/CMakeLists.txt
+++ b/firmware/gps/components/deployment/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
-    SRCS "ready.c"
+    SRCS "deployment.c"
     INCLUDE_DIRS "include"
-    REQUIRES driver
+    REQUIRES driver sm
 )
