fix: Got cmd request recognition working, can ping psat and get a pong back.

--- a/firmware/lora/lora-board/CMakeLists.txt
+++ b/firmware/lora/lora-board/CMakeLists.txt
@@ -63,6 +63,7 @@ target_compile_definitions(ai_thinker_lib PUBLIC
     CONFIG_DEBUG_UART=UART0  # <-- This fixes the undeclared identifier error
     USE_MODEM_LORA
     REGION_CN470
+    d_runPsatConnectionTests
 )
 
 
