--- a/firmware/Servo/main/CMakeLists.txt
+++ b/firmware/Servo/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "servo.c" "mcpwm_servo_control_example_main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.c"
+                    INCLUDE_DIRS "."
+                    REQUIRES servo)
