Refac: Added a couple preprocessor definitions for separating lora binary modes

--- a/firmware/lora/lora-board/CMakeLists.txt
+++ b/firmware/lora/lora-board/CMakeLists.txt
@@ -64,6 +64,7 @@ target_compile_definitions(ai_thinker_lib PUBLIC
     USE_MODEM_LORA
     REGION_CN470
     d_runPsatConnectionTests
+    d_aiThinkerPlatform
 )
 
 
