--- a/firmware/lora/lora-board/Makefile
+++ b/firmware/lora/lora-board/Makefile
@@ -1,13 +1,18 @@
 # NumProcessors = `getconf NPROCESSORS_CONF`
 
-.PHONY: all build configure clean test rebuild debug _debug
+.PHONY: all build configure_standalone configure_combo_mode clean test rebuild debug _debug
 
-all: configure build
+combo_mode: configure_combo_mode build
+
+standalone_mode: configure_standalone build
 
 debug: _debug build
 
 
-configure:
+configure_standalone:
+	cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=arm-toolchain.cmake -Dd_psatStandaloneMode
+
+configure_combo_mode: # Basically the uart forwarding firmware
 	cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=arm-toolchain.cmake
 
 build:
