chore: Changed the cmakelists.txt to glob c files

--- a/firmware/test/esp32-lora-test/components/radio_impl/CMakeLists.txt
+++ b/firmware/test/esp32-lora-test/components/radio_impl/CMakeLists.txt
@@ -1,5 +1,7 @@
+file(GLOB radio_impl_c_files "*.c")
+
 idf_component_register(
-    SRCS "esp32-lora-radio-impl.c"
+    SRCS ${radio_impl_c_files}
     INCLUDE_DIRS "include"
     REQUIRES driver
 )
