feat: made psat_lora.h and .c truly interchangeable, and added functionality to run it in the test file (allegedly works)
Fucking finally lora works. No more need to off myself ;)

--- a/firmware/test/esp32-lora-test/main/CMakeLists.txt
+++ b/firmware/test/esp32-lora-test/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "esp32-lora-test.c"
     INCLUDE_DIRS "."
-    REQUIRES radio_impl driver
+    REQUIRES radio_impl driver psat_fsm esp_timer
 )
