feat: add buttons for prelaunch ready, and confirm landing

--- a/firmware/esp32/components/sm/CMakeLists.txt
+++ b/firmware/esp32/components/sm/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "sm.c" "state_handlers.c" "timers.c"
     INCLUDE_DIRS "include"
-    REQUIRES gps driver deployment esp_timer audio servo
+    REQUIRES gps driver deployment esp_timer audio servo mock_buttons
 )
