--- a/firmware/esp32/CMakeLists.txt
+++ b/firmware/esp32/CMakeLists.txt
@@ -6,3 +6,4 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 # "Trim" the build. Include the minimal set of components, main, and anything it depends on.
 idf_build_set_property(MINIMAL_BUILD ON)
 project(PSAT_GPS)
+add_compile_definitions(FULL_STACK_PDR_PROTOTYPE)
