--- a/firmware/esp32/components/psat_fsm/CMakeLists.txt
+++ b/firmware/esp32/components/psat_fsm/CMakeLists.txt
@@ -3,5 +3,5 @@ file(GLOB psat_fsm_c_files "*.c")
 idf_component_register(
     SRCS ${psat_fsm_c_files}
     INCLUDE_DIRS "include"
-    REQUIRES esp_timer gps radio_impl sm
+    REQUIRES esp_timer gps radio_impl sm servo
 )
