feat: send state over lora working :D

--- a/firmware/esp32/components/radio_impl/CMakeLists.txt
+++ b/firmware/esp32/components/radio_impl/CMakeLists.txt
@@ -3,5 +3,5 @@ file(GLOB radio_impl_c_files "*.c")
 idf_component_register(
     SRCS ${radio_impl_c_files}
     INCLUDE_DIRS "include"
-    REQUIRES driver
+    REQUIRES driver sm
 )
