--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pdr-firmware-archived/lora/lora-board/external/Ai-Thinker-LoRaWAN-Ra-08"]
 	path = pdr-firmware-archived/lora/lora-board/external/Ai-Thinker-LoRaWAN-Ra-08
 	url = https://github.com/Ai-Thinker-Open/Ai-Thinker-LoRaWAN-Ra-08.git
+[submodule "firmware/ground-station/external/Ai-Thinker-LoRaWAN-Ra-08"]
+	path = firmware/ground-station/external/Ai-Thinker-LoRaWAN-Ra-08
+	url = https://github.com/Ai-Thinker-Open/Ai-Thinker-LoRaWAN-Ra-08.git
