--- a/firmware/platform-agnostic-testing/CMakeLists.txt
+++ b/firmware/platform-agnostic-testing/CMakeLists.txt
@@ -14,6 +14,15 @@ add_compile_options(-Wall -Wextra -Og -g)
 set(shared_dir "../platform-agnostic/shared/")
 set(required_impls_dir "../platform-agnostic/required-impls/")
 
+#########################
+# Building test helpers #
+#########################
+
+file(GLOB test_helpers_cfiles test_helpers/*.c)
+add_library(test_helpers STATIC ${test_helpers_cfiles})
+target_include_directories(test_helpers PUBLIC test_helpers)
+# target_link_libraries(test_helpers PRIVATE shared_api)
+
 ##################################
 # Building the shared components #
 ##################################
@@ -22,6 +31,7 @@ set(required_impls_dir "../platform-agnostic/required-impls/")
 file(GLOB impls_c impls/*.c)
 add_library(impls ${impls_c})
 target_include_directories(impls PUBLIC ${required_impls_dir})
+target_link_libraries(impls PRIVATE test_helpers)
 
 # Build the shared apis
 file(GLOB shared_api_cfiles ${shared_dir}/*.c)
@@ -29,15 +39,6 @@ add_library(shared_api STATIC ${shared_api_cfiles})
 target_include_directories(shared_api PUBLIC ${shared_dir} ${required_impls_dir})
 target_link_libraries(shared_api PRIVATE impls)
 
-
-#########################
-# Building test helpers #
-#########################
-
-file(GLOB test_helpers_cfiles test_helpers/*.c)
-add_library(test_helpers STATIC ${shared_api_cfiles})
-target_include_directories(test_helpers PUBLIC test_helpers)
-target_link_libraries(test_helpers PRIVATE shared_api)
 
 
 ##################
