refac: switching to 1 library + main.c to support cleaner creation of test bins

--- a/firmware/ground-station/ai-thinker/CMakeLists.txt
+++ b/firmware/ground-station/ai-thinker/CMakeLists.txt
@@ -1,14 +1,30 @@
 cmake_minimum_required(VERSION 3.23)
-set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
+
+# =============================================================================
+# Project Configuration
+# =============================================================================
+
+set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 project(psat_lora LANGUAGES C CXX ASM)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# --- Source Files & Directories ---
+
+add_compile_options(
+    -Wall 
+    -Wextra 
+    $<$<COMPILE_LANGUAGE:C>:-std=c23>
+)
+
+# =============================================================================
+# Global Paths
+# =============================================================================
+
 set(ai_thinker_source_dir "external/Ai-Thinker-LoRaWAN-Ra-08")
 set(linker_script "${CMAKE_CURRENT_SOURCE_DIR}/cfg/gcc.ld")
 
+# =============================================================================
+# Ai-Thinker SDK Sources
+# =============================================================================
 
-# --- Ai-Thinker SDK Library ---
-# Correctly glob for all source files recursively
 file(GLOB_RECURSE ai_thinker_c_src
     "${ai_thinker_source_dir}/drivers/peripheral/src/*.c"
     "${ai_thinker_source_dir}/lora/driver/*.c"
@@ -19,11 +35,17 @@ file(GLOB_RECURSE ai_thinker_c_src
     "${ai_thinker_source_dir}/lora/system/crypto/*.c"
     "${ai_thinker_source_dir}/platform/system/*.c"
 )
-# Manually add the printf implementation file
-list(APPEND ai_thinker_c_src "${ai_thinker_source_dir}/platform/system/printf-stdarg.c")
-# Create a library from all the SDK source files
+
+list(APPEND ai_thinker_c_src
+    "${ai_thinker_source_dir}/platform/system/printf-stdarg.c"
+)
+
+# =============================================================================
+# Ai-Thinker SDK Library Target
+# =============================================================================
+
 add_library(ai_thinker_lib STATIC ${ai_thinker_c_src})
-# Add the necessary include directories for the SDK library
+
 target_include_directories(ai_thinker_lib PUBLIC
     "${ai_thinker_source_dir}/drivers/peripheral/inc"
     "${ai_thinker_source_dir}/drivers/crypto/inc"
@@ -38,8 +60,7 @@ target_include_directories(ai_thinker_lib PUBLIC
     "${ai_thinker_source_dir}/platform/system"
     "${CMAKE_CURRENT_SOURCE_DIR}/inc"
 )
-# --- Compile Options & Definitions for the SDK library ---
-# We use PUBLIC here so that any target linking this library will inherit these settings.
+
 target_compile_options(ai_thinker_lib PUBLIC
     -Wall
     -Os
@@ -50,60 +71,79 @@ target_compile_options(ai_thinker_lib PUBLIC
     -mfpu=fpv4-sp-d16
     -mfloat-abi=softfp
     -mcpu=cortex-m4
-    -mthumb  
+    -mthumb
     -fno-builtin-printf
     -fno-builtin-sprintf
     -fno-builtin-snprintf
     -Wno-format-security
     -Wno-format-truncation
 )
+
 target_compile_definitions(ai_thinker_lib PUBLIC
-    CONFIG_DEBUG_UART=UART0 # Sets uart0 to be debug. 
+    CONFIG_DEBUG_UART=UART0
     USE_MODEM_LORA
     REGION_CN470
 )
 
-# Set this to your main executable
-set(main_c 
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c"
-    # DO NOT REMOVE THIS!!!!
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/tremo_it.c"
-)
-add_executable(main 
-    ${main_c}
-    "${ai_thinker_source_dir}/platform/system/startup_cm4.S"
-)
 
+# =============================================================================
+# Application Support Library
+# =============================================================================
 
-# Any other c files should automatically get added here.
 file(GLOB_RECURSE src_lib_c "src/*")
-list(FILTER src_lib_c EXCLUDE REGEX ".*/(main|tremo_it)\\.c$")
 
-# Also add any custom libraries here.
 add_library(src_lib STATIC ${src_lib_c})
-# For us we need this.
-target_include_directories(src_lib PUBLIC 
-    "../shared/"
+target_include_directories(src_lib PUBLIC
+    "./inc/"
+    "../../platform-agnostic/required-impls/"
 )
 
+# =============================================================================
+# Application Sources
+# =============================================================================
 
-target_link_libraries(main PRIVATE
-    ai_thinker_lib
-    # Crypto is broken
-    # "${ai_thinker_source_dir}/drivers/crypto/lib/libcrypto.a"
-    # Add anything else you want to link
-    # Down here.
-)
+file(GLOB exe_dirs "exes/*")
+message("-- Exes: ${exe_files_c}")
+foreach(exe_dir IN LISTS exe_dirs)
+    if(NOT IS_DIRECTORY ${exe_dir})
+        continue()
+    endif()
+    file(GLOB exe_files_c "${exe_dir}/*.c")
+    get_filename_component(exe_name ${exe_dir} NAME)
+    message("-- Exe filename component: ${exe_name}")
+    add_executable(${exe_name}
+        ${exe_files_c}
+        "${ai_thinker_source_dir}/platform/system/startup_cm4.S"
+    )
+    # Target Linking
+    target_link_libraries(${exe_name} PRIVATE
+        ai_thinker_lib
+    )
 
-# Add linker options for this target
-target_link_options(main PRIVATE
-    -static
-    -mcpu=cortex-m4
-    -mthumb
-    "-T${linker_script}"
-    -Wl,--gc-sections
-    -Wl,--wrap=printf
-    -Wl,--wrap=sprintf
-    -Wl,--wrap=snprintf
-    -Wl,-Map=${CMAKE_BINARY_DIR}/main.map
-)
+    # Linker Options
+    target_link_options(${exe_name} PRIVATE
+        -static
+        -mcpu=cortex-m4
+        -mthumb
+        "-T${linker_script}"
+        -Wl,--gc-sections
+        -Wl,--wrap=printf
+        -Wl,--wrap=sprintf
+        -Wl,--wrap=snprintf
+        -Wl,-Map=${CMAKE_BINARY_DIR}/main.map
+        -ffreestanding
+    )
+    add_custom_command(
+        TARGET ${exe_name}
+        POST_BUILD
+        COMMAND ${CMAKE_OBJCOPY}
+        ARGS -O binary $<TARGET_FILE:${exe_name}> ${exe_name}.bin
+    )
+endforeach()
+# set(main_c
+#     "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c"
+# )
+
+# add_executable(main
+#     ${main_c}
+# )
