--- a/firmware/psat-station/.pre-commit-config.yaml
+++ b/firmware/psat-station/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
           - --suppress=missingIncludeSystem
           - --error-exitcode=1
           - --inline-suppr
+          - --suppress=*:firmware/platform-agnostic/shared/shared_state.h
           - --suppress=*:firmware/psat-station/components/gps/include/minmea.h
           - --suppress=*:firmware/psat-station/components/gps/minmea.c
 
