--- a/firmware/psat-station/components/gps/CMakeLists.txt
+++ b/firmware/psat-station/components/gps/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "gps_driver.c" "gps_data.c"  "minmea.c"
     INCLUDE_DIRS "include"
-    REQUIRES driver config
+    REQUIRES driver config shared
 )
