--- a/firmware/psat-station/components/timers/CMakeLists.txt
+++ b/firmware/psat-station/components/timers/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "timers.c"
     INCLUDE_DIRS "include"
-    REQUIRES esp_timer fsm
+    REQUIRES esp_timer fsm shared
 )
