--- a/firmware/psat-station/components/ldr/test/CMakeLists.txt
+++ b/firmware/psat-station/components/ldr/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS "."
-                    REQUIRES unity
-                    INCLUDE_DIRS ".")
+                       INCLUDE_DIRS "."
+                       REQUIRES unity config driver)
