--- a/firmware/psat-station/CMakeLists.txt
+++ b/firmware/psat-station/CMakeLists.txt
@@ -5,6 +5,15 @@ set(EXTRA_COMPONENT_DIRS
     "${CMAKE_SOURCE_DIR}/../platform-agnostic"
 )
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+option(TEST "Set the psat station testing flag" 0)
+if(TEST)
+    add_compile_definitions(
+      "PSAT_STATION_TESTING_d"
+    )
+endif()
+unset(TEST CACHE) 
+
 project(psat-station)
 idf_build_set_property(
     INCLUDE_DIRECTORIES
