--- a/firmware/psat-station/components/loraFsm/CMakeLists.txt
+++ b/firmware/psat-station/components/loraFsm/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "./loraFsm.c" "./packets.c"
                  	INCLUDE_DIRS "include"
-					REQUIRES shared lora loraImpl esp_timer)
+					REQUIRES shared lora loraImpl esp_timer fsm gps)
