feat: implemented internal use dynamic memory allocation for loraFsm.

--- a/firmware/psat-station/main/CMakeLists.txt
+++ b/firmware/psat-station/main/CMakeLists.txt
@@ -1,1 +1,4 @@
-idf_component_register(SRCS "psat-station.c" INCLUDE_DIRS "." REQUIRES fsm timers config driver gps buttons shared)
+idf_component_register(SRCS "psat-station.c" 
+    INCLUDE_DIRS "." 
+    REQUIRES fsm timers config driver gps buttons shared helpers
+)
