--- a/firmware/psat-station/components/lora/CMakeLists.txt
+++ b/firmware/psat-station/components/lora/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "shared_lora.c"
                     INCLUDE_DIRS "include"
-                    PRIV_REQUIRES loraImpl
+                    PRIV_REQUIRES loraImpl helpers
 )
