chore: updated flake and some random ass thing formatted

--- a/firmware/psat-station/test/CMakeLists.txt
+++ b/firmware/psat-station/test/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 include($ENV{IDF_PATH}/tools/cmake/version.cmake)
+include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+idf_build_set_property(C_COMPILE_OPTIONS -Wno-error APPEND)
 
 set(EXTRA_COMPONENT_DIRS
 "${CMAKE_SOURCE_DIR}/../../platform-agnostic" "../components"
 )
 set(TEST_COMPONENTS "buzzers" "servo")
 
-include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(psat-station-test)
