--- a/firmware/ground-station/app/package.json
+++ b/firmware/ground-station/app/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "css": "pnpm dlx @tailwindcss/cli -i static/css/main.css -o static/css/output.css --watch",
+    "ts": "tsc --watch"
   },
   "keywords": [],
   "author": "",
