--- a/firmware/ground-station/app/src/lib/Makefile
+++ b/firmware/ground-station/app/src/lib/Makefile
@@ -1,15 +1,11 @@
 all:
 	@gcc -c -fPIC \
-		../../../../psat-station/components/loraFsm/packets.c \
 		-I../../../../platform-agnostic/shared/ \
+		-I../../../../platform-agnostic/required-impls \
 		-I../../../../psat-station/components/loraFsm/include/ \
-		-I../../../../psat-station/components/helpers/include \
-		../../../../psat-station/components/helpers/helpers.c \
+		../../../../platform-agnostic/shared/shared_lora.c \
 		loraImpl.c \
-		../../../../psat-station/components/loraFsm/packets.c \
-		../../../../platform-agnostic/shared/shared_lora.c -I \
-		../../../../platform-agnostic/required-impls utilsImpl.c \
-		-I../../../../platform-agnostic/shared \
-		-DBalls -std=c23
+		utilsImpl.c \
+		-std=c23
 	@gcc -shared -Wl  -o libLoraParser.so *.o
 
