fix: Aiden made it work IDK how or what he did

--- a/firmware/psat-station/components/loraImpl/CMakeLists.txt
+++ b/firmware/psat-station/components/loraImpl/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "./loraImpl.c"
+idf_component_register(SRCS "loraImpl.c" "./loraImpl.c"
                     INCLUDE_DIRS "include"
                     REQUIRES utilsImpl loraHal loraCfg
                     PRIV_REQUIRES esp_driver_spi esp_driver_gpio esp_timer
