--- a/firmware/psat-station/components/bmp280/CMakeLists.txt
+++ b/firmware/psat-station/components/bmp280/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "BMP280.c"
+idf_component_register(SRCS "bmp280.c"
                     INCLUDE_DIRS "include"
                     REQUIRES driver config I2C shared)
